fixed prduct card sizing with text wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -1352,6 +1352,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   cursor: pointer;
 }
 .product-card__anchor {
@@ -1362,6 +1365,9 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 .product-card__overlay {
   position: absolute;
@@ -1380,6 +1386,9 @@ body {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 .product-card__caption-box {
   display: -webkit-box;
@@ -1394,6 +1403,9 @@ body {
   border-left: 1px solid #ececec;
   border-right: 1px solid #ececec;
   border-bottom: 1px solid #ececec;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 .product-card__heading {
   font-weight: 700;
